19990729-10:40 CET Victor Szel <info@szelvesz.hu>
  ! source/vm/hvm.c - #include "itemapi.h" added
    to fix a warning.
  ! source/rtl/inkey.c - hb_inkeyPoll() #define-ed out
    the kbhit() and getch() calls in Cygwin, until
    some better solution is found.
  + include/ctoharb.h - PushNumber() declaration added.
  + source/rtl/arrays.c/hb_arrayEval() now passes the index
    to the codeblock as the second parameter.
  + tests/working/arreval.prg
    tests/working/Makefile
    aEval() test program added.
  - source/rtl/arrays.c - Removed duplicate declarations.
  + tests/working/rtl_test.prg - Now returns errorlevel 1
    if anything fails, and 0 if OK.

19990729-01:40 EDT Paul Tucker <ptucker@sympatico.ca>
   * source/rtl/dir.c
     + #if !defined(FA_ENCRYPTED)
   * source/compiler/harbour.y
     * in FUNCINFO[] change:
     { SELECT, 0, 1 }

19990729-05:25 CET Victor Szel <info@szelvesz.hu>
  * Changed all #include <x> to #include "x", where
    x is a Harbour header file.
    Many source and header files involved.
  * include/extend.h - Small cleanups.
  * include/extend.h - Some functions renamed to be more
    consistent.
    source/rtl/arrays.c
    source/rtl/classes.c
    source/rtl/codebloc.c
    source/rtl/dir.c
    source/rtl/errorapi.c
    source/rtl/extend.c
    source/rtl/itemapi.c
    source/rtl/memvars.c
    source/rtl/transfrm.c
    source/tools/debug.c 
    source/vm/hvm.c
    ItemCopy()      -> hb_itemCopy()
    ItemRelease()   -> hb_itemClear()
    ItemUnRef()     -> hb_itemUnRef()
    GetMethod()     -> hb_GetMethod()
  * include/version.h renamed to hb_ver.h
    source/rtl/environ.c
    source/compiler/harbour.y
    include/Makefile
  * source/vm/hvm.c - hb_item*() functions moved to source/rtl/itemapi.c
  * source/vm/hvm.c - Codeblock and memvar management function
    declarations moved to include/extend.h
  * source/rtl/strcmp.c/hb_stricmp() moved to source/rtl/strings.c